fix: Fix weird header appearance on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,6 +64,5 @@ body {
 }
 
 .form-submit:hover {
-    color: #ff952b;
-    background-color: white;
+    background-color: #2bff4e;
 }
